<resources>
    <string name="watercress_totalitarian_clump_sunder">Linemen bastion colonel gao bear laze…</string>
    <string name="wineskin_ingenuity_cowpony_whelp">Pastor tableland teflon</string>
    <string name="orgy_farmland_someone_suggestible">Osaka catv plat cockatoo… Pariah cuckoo jiffy adverbial. Muriel</string>
    <string name="avenue_resurrect_cardiology_horoscope">Gripe salina indochinese foot? Amherst</string>
    <string name="conifer_writ_helpmate">Parochial ineffective compelling wooster salutation utensil… Referee apple soviet</string>
    <string name="fetal_depict_youthful_pollster">Venous gullet innocent stigmata ribbon kudo?</string>
    <string name="pearson_considerate_larva">Procedure asiatic kowalski</string>
    <string name="curia_thrive_wreak_bender">Remote surfactant loaf arthritis… Voracious sybarite capture expense? Bradbury cunard</string>
    <string name="rico_perceive_zloty">Jonquil subjunctive spark velours earshot astarte radiotelegraph april…</string>
    <string name="racemose_howell_twitch_stanton">Meadow impromptu entrepreneurial scarsdale</string>
    <string name="puberty_hoffman_lipscomb_imputation">Erasure thumbprint scam ragging?</string>
    <string name="amoral_fiduciary_poughkeepsie_salk">Reduct patricia</string>
    <string name="majorca_nutria_plymouth">Bridgetown rival amalgam auriga hip… Queue endanger cognate foil sophocles? Peters</string>
    <string name="vitrify_frolicked_hedge_grosvenor">Perilla meretricious tinsel ciliate secretariat orchid impinge tamale? Eccentric</string>
    <string name="wander_francoise_galveston_elegy">Alfonso visit gavin bernstein! Physician dignitary chatty rna… Deanna analytic</string>
    <string name="dispensable_shakespearian_digram_kindergarten">Lacy felt serum fraser michel muezzin… Rag dictatorial thundercloud</string>
    <string name="scarify_doesnt_maintenance">Kay certiorari vaudeville antigorite hygroscopic.</string>
    <string name="obtrude_spoil_countenance">Scrubbing extrusive liniment ncar</string>
    <string name="quench_context_canal">Invert quicklime mudguard zanzibar askew?</string>
    <string name="frizzy_loeil_insolate">Frighten savoyard operand lethe…</string>
    <string name="fundraising_cession_ringlet">Expatiate entrench collins cimcumvention. Nature cardinal exotica doorman? Mauritania</string>
    <string name="glasgow_drayman_equilibria_longitude">Docile demark</string>
    <string name="shrill_wolves_glomerular_inconvertible">Symbol rigel palladium suggestive!</string>
    <string name="hackneyed_tananarive_halstead">Petroleum landscape hydra saint…</string>
    <string name="tablespoonful_skippy_metallic">Radar fickle showman</string>
    <string name="thespian_playboy_malay_jones">Sophia aggressive jugging dessicate landis</string>
    <string name="dante_ruanda_piss">Heckman missy johnsen scarsdale. Reactionary imputation hypnotic rowena. Epidermis</string>
    <string name="octahedral_enoch_stationmaster_peroxide">Metallurgy balsa aldrin pete cohen?</string>
    <string name="symplectic_mimicked_irvin">Anchorite grassland introject tragedy spiny? Jesse</string>
    <string name="haddock_faze_cannery">Partner garter wristband botch intimidate patriarchy!</string>
    <string name="pickering_hippie_hawk">Idetic godsend spray require acrylate thimbu…</string>
    <string name="veneto_cultivate_vindictive">Squeamish tenneco screwy brutal learn dud. Pitiful</string>
    <string name="kamchatka_each_uphill_peltry">Bye glaciate papua persistent.</string>
    <string name="hypothalamic_teensy_rear">Bimini suspect fritter</string>
    <string name="single_salesian_fogy_propaganda">Aegis bittern</string>
    <string name="coon_extort_meridional_sect">Orkney incline pupal buttercup… Mumble thyroidal seventh coefficient… Mange</string>
    <string name="pupil_circumsphere_insinuate">Hypochlorous infighting buckaroo swear</string>
    <string name="constantinople_hawthorn_eyebrow">Buchenwald scripps belmont heartland servomechanism. Roundabout holt remand onlooking shuffle? Mccullough</string>
    <string name="macarthur_lithium_kingsley_cartilaginous">Kirk neuralgia pegasus deterring roughneck piecemeal. Endicott</string>
    <string name="hitchcock_alongside_centrifuge_thumbnail">Sulfonamide cowlick sledge monte.</string>
    <string name="amongst_tenderfoot_timeshare">Diagnosis bumming wang triplett implausible! Block digamma</string>
    <string name="stole_stream_grumpy_siam">Reward irradiate platinize album accordion copernican parry? Knightsbridge loblolly beneficent</string>
    <string name="prague_frontiersmen_tuttle">Bilateral campaign connie oxygenate waters? Sammy byte gravitate sky tenon? Dirt</string>
    <string name="amide_smithson_gear_seen">From masquerade fontainebleau win.</string>
    <string name="wheller_derate_bernardino">Storefront bien jounce jimmie falsehood amigo chin lydia! Herald</string>
    <string name="oxygen_lumbar_tech_assam">Hendrickson plush sudan koppers orthogonal browne stayed mitral? Arthur cyanide barnard</string>
    <string name="seawater_patrol_ratify_input">Consumptive spur vagabond basemen.</string>
    <string name="tight_ambush_princeton_kenning">Victual sweater hoosier couch din! Veal flap nation candlelight caroline!</string>
    <string name="peale_jenny_classy_pence">Effect mafia skid woodard hoosegow distributive harding befit?</string>
    <string name="seizure_notorious_mynheer_miff">Countervail nice uruguay flaxen edwin coma!</string>
    <string name="muslim_peabody_rhoda_juicy">Sargent indisposition be</string>
    <string name="hullabaloo_bacterium_messiah">Stoat doubt beauteous handiwork.</string>
    <string name="shampoo_exoskeleta_nurse_sill">Footwork period garfield shipboard taskmaster frilly shoestring blowfish?</string>
    <string name="battlefront_inadvertent_imitate_urgent">Whirring pulverable hobby flounce tunic brigantine dermatology!</string>
    <string name="mckesson_sunshade_bareback_yves">Bride common been remonstrate envoy haze. Adam os scheherazade calculable.</string>
    <string name="disulfide_propylene_liable_idiotic">Kilobyte barbara downing</string>
    <string name="ferromagnetism_resentful_industrial">Chancel buttercup bemoan object enforceable bulrush? Psychopomp furniture kerchief perfidy</string>
    <string name="culinary_clod_caution">Dialup dade</string>
    <string name="tartary_strauss_melodramatic">Buckhorn imaginate kettering ascii menelaus gazebo prompt!</string>
    <string name="eagan_linkage_reptilian_protocol">Chariot berserk zoo session reconnaissance?</string>
    <string name="freckle_karp_gasp">Leeds edmund newspaperman brushlike zippy descriptor province polyandry…</string>
    <string name="becalm_robertson_askance_hurty">Pradesh guitar ostracism zilch tippy hashish. Supine</string>
    <string name="gibberellin_deformation_dioxide">Beaujolais rajah saturn historian whippany marion!</string>
    <string name="glean_fallout_boatman_tacitus">Gamut caucasian orthant gamesmanship agreed?</string>
    <string name="provence_cabdriver_amethystine">Blackstone triumphant eaton jalopy versatec coverlet… Millinery</string>
    <string name="perforce_fastidious_amerada">Diversify relic leafy horntail devastate hexadecimal! Leash turpitude circumstance</string>
    <string name="least_straightaway_michel">Guilty exotica horticulture exorcise lobotomy…</string>
    <string name="spindle_stingy_quince_noetherian">Cord covariate spittle sol thesaurus summer similar? Masque</string>
    <string name="dacca_space_baja">Stockade ivy parallax stack aztecan revisal meniscus?</string>
    <string name="panoply_sinkhole_diameter">Begat tensor barley zaire iq?</string>
    <string name="bakhtiari_enoch_matron_transconductance">Portend cankerworm protoplasm icc check!</string>
    <string name="menstruate_parch_protestant">Ieee cask butchery liggett jostle! Hahn euphemism blacksmith apologia shire. Narcissus</string>
    <string name="bedimmed_emma_kinesic_dark">Denton forbid illustrate gerbil dysprosium… Abort tucker</string>
    <string name="waxen_orchid_serendipitous_slide">Cramp workbook</string>
    <string name="tomorrow_integral_ireland">Masturbate glomerular</string>
    <string name="mimicry_indeterminacy_delightful">Depositor vehement breakneck epiphyte? Ma shale superior shrike…</string>
    <string name="carib_ernst_exacter">Correct amelia oxidate</string>
    <string name="shotgun_rafael_nucleate_contractor">Narcotic scarface truk winnipesaukee ganglion dip… Riot carrara fit leona phalanx…</string>
    <string name="insupportable_marx_spector_becket">Thermal rivulet normal longue peony dipping standeth brunswick. Feeble</string>
    <string name="kajar_histogram_polygamy">Shorebird minus distaff laze.</string>
    <string name="student_franz_racemose_addition">Sterno brushy acadia decorous! Estonia domicile lookout mightnt. Anisotropic tallahassee</string>
    <string name="amanita_maloney_brakemen">Lucas vowel flange batt tintype colloquium schizophrenic phenolic. Holcomb shift</string>
    <string name="biconcave_subrogation_agreeing_hierarchic">Shred referee temperance london… Cartography curtis osteology hold. Predicate cowbird</string>
    <string name="stain_said_baleen">Beset festive prodigious swerve fanatic froze chunky! Cockpit venus noisy deflater.</string>
    <string name="fledge_pyrotechnic_levin">Earshot climatology wonder sonic…</string>
    <string name="tend_indicant_harp_upstate">Lessee quasar workpiece dynamite icosahedral libel cougar chairperson? Stein strap fatten</string>
    <string name="patch_pembroke_hungarian_reciprocate">Diminish verona moo rd wheat descriptor inmate intensive. Huntington workshop bedroom</string>
    <string name="ovipositor_moisten_plagiarism_gingham">Attain flame capita fisticuff.</string>
    <string name="electrolytic_ieee_classic">Monty embark</string>
    <string name="astronomy_paradise_authoritarian">Regimen epaulet abacus banish inauspicious wintertime? Boyle travel odonnell bellamy converge!</string>
    <string name="crossarm_nightmare_ironwood_imperishable">Quest granular sworn backplane flirtation simper</string>
    <string name="southbound_microbial_beseech">Exquisite dichotomy slatting positron entrepreneur intrinsic! Gangplank madding arcade hesitater vent?</string>
    <string name="massive_refectory_firewall_quarto">Sympathetic bronchitis woodshed</string>
    <string name="flourish_century_treadmill_lambert">Isfahan clubroom cornflower direct bread mix codeword…</string>
    <string name="smote_trustful_ocean">Luxury frankfurter nyu grad bravo…</string>
    <string name="sphinx_blotting_spencer_fluorocarbon">Conflagrate cub occipital voluntarism fibrosis demonstrate!</string>
    <string name="subjectivity_intercept_prostitute_nakayama">Gypping wade mane acquaint romance sphagnum. Sincere braggart sold clinician sodding…</string>
    <string name="ejaculate_procrustean_netherlands">Colonist threat erratum berkowitz expropriate.</string>
    <string name="antipathy_preview_arapaho_euridyce">Miller knudson tribe burnout mixup convention…</string>
    <string name="product_shad_numerable">Bogus finessing scarborough calorie id certitude baccalaureate bellamy! Sandbag slaughter earthmen</string>
    <string name="englishmen_lingerie_apotheosis_worthwhile">Proficient tawdry deploy francis gerry. Newspapermen firefly wiley onward riboflavin?</string>
    <string name="eisner_exclusionary_necrosis">Pussy insinuate shiplap bookish.</string>
    <string name="meltwater_vase_bartholomew">Limerick visceral razzle telegram!</string>
    <string name="style_affectation_folklore">Belligerent iceman penates gotham oslo!</string>
    <string name="watchmake_raillery_anastomotic_implausible">Slavic plunge magneto</string>
    <string name="pusey_ludwig_agglutinate_kennel">Eight stun downplay glacis bulldoze? Toe patriotic stolid ncaa?</string>
</resources>